feat(request_sync_response) : Add support for request sync response endpoint
feat(open_api) :Add support to open api non admin for request sync response endpoint
feat(request_sync_response_service) : Add application logic for request sync response endpoint, and appropriate tests.
feat(request_sync_response_handler) : Add http logic for request sync response endpoint, and appropriate tests.
feat(server_http): Import request sync response endpoint to new server file
